<resources>
    <string name="app_name">RapidValue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_enter_password">Enter your 6 digit password</string>
    <string name="title_enter_username">Enter Email id</string>
    <string name="hint_username">Email Id</string>
    <string name="hint_password">Password</string>
    <string name="title_remember_password">Remember password</string>
    <string name="title_login">Login</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
</resources>
