<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<data>
    <variable
        name="viewModel"
        type="com.rapidvaluetest.user.LoginViewModel" />
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_enter_username"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/etUserName"
        app:layout_constraintLeft_toLeftOf="@+id/etUserName" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner_view"
        app:layout_constraintBottom_toTopOf="@+id/tvPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        app:addTextChangedListener="@{viewModel.getEmailTextWatcher}"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_enter_password"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintLeft_toLeftOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:addTextChangedListener="@{viewModel.getPasswordTextWatcher}"/>

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/title_remember_password"
        android:onClick="@{viewModel.onCheckedChanged}"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cbRemember"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/title_login"
        android:textSize="15sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif-medium"
        android:onClick="@{viewModel::onClicked}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>